--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -83,18 +83,18 @@
 
             <div class="manage-class-section">
                 <div class="form-row manage-class-form-row">
-                    <div class="col-md-3">
+                    <div class="col-lg-3">
                         <label class="add-new-class-label text-muted" for="className">Name</label>
                         <input type="text" id="className" name="className" class="form-control form-control-sm" disabled="true"
                         placeholder="@{
                             classDetails.className.name
                         }">
                     </div>
-                    <div class="col-md-9"></div>
+                    <div class="col-lg-9"></div>
                 </div>
 
                 <div class="form-row manage-class-form-row">
-                    <div class="col-md-12">
+                    <div class="col-lg-12">
                         <label class="add-new-class-label text-muted" for="classDescription">Description</label>
                         <input type="text" id="classDescription" name="classDescription" class="form-control form-control-sm" disabled="true"
                         placeholder="@{
@@ -104,83 +104,167 @@
                 </div>
 
                 <div class="form-row add-new-class-form-row">
-                    <div class="col-md-5">
+                    <div class="col-sm-12 col-lg-5">
                         <div class="text-center">
                             <label class="manage-class-desription-label manage-class-group-header">Maths Groups</label>
                         </div>
-                        <div class="row">
-                            <div class="col-md-3 text-muted"><small>Group</small></div>
-                            <div class="col-md-5 text-muted"><small>Description</small></div>
-                            <div class="col-md-2 text-muted"><small>Level</small></div>
-                            <div class="col-md-2"></div>
+                        <div class="row in-app-menu-medium-and-up">
+                            <div class="col-lg-3 text-muted"><small>Group</small></div>
+                            <div class="col-lg-5 text-muted"><small>Description</small></div>
+                            <div class="col-lg-2 text-muted"><small>Level</small></div>
+                            <div class="col-lg-2"></div>
                         </div>
                         @for(group <- classDetails.groups) {
                             @if(group.groupType.value.toLowerCase == "maths") {
-                                <div class="form-row manage-class-group-row">
-                                    <div class="col-md-3">
-                                        <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
-                                        placeholder="@{
-                                            group.groupName.name
-                                        }">
-                                    </div>
-                                    <div class="col-md-5">
-                                        <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
-                                        placeholder="@{
-                                            group.groupDescription.name
-                                        }">
-                                    </div>
-                                    <div class="col-md-2">
-                                        <input type="text" name="groupType" class="form-control form-control-sm" disabled="true"
-                                        placeholder="@group.groupLevel.value.toLowerCase.capitalize.replace("level", "")">
-                                    </div>
-                                    <div class="col-md-2">
-                                        <button id="manage-class-edit" type="button" class="btn btn-sm btn-info" disabled="true">
-                                            Group Plans
-                                        </button>
-                                    </div>
+                                <div class="manage-new-group-row">
+                                    <div class="form-row manage-class-group-row">
 
+                                        <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
+                                            <div class="col-sm-12 text-muted"><small>Group Name</small></div>
+                                            <div class="col-sm-12 ">
+                                                <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
+                                                placeholder="@{
+                                                    group.groupName.name
+                                                }">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 in-app-menu-medium-and-up">
+                                            <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                group.groupName.name
+                                            }">
+                                        </div>
+
+
+                                        <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
+                                            <div class="col-sm-12 text-muted"><small>Description</small></div>
+                                            <div class="col-sm-12 ">
+                                                <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
+                                                placeholder="@{
+                                                    group.groupDescription.name
+                                                }">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-5 in-app-menu-medium-and-up">
+                                            <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                group.groupDescription.name
+                                            }">
+                                        </div>
+
+
+                                        <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
+                                            <div class="col-sm-12 text-muted"><small>Level</small></div>
+                                            <div class="col-sm-12 ">
+                                                <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
+                                                placeholder="@{
+                                                    group.groupLevel.value.toLowerCase.capitalize.replace("level", "")
+                                                }">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-2 in-app-menu-medium-and-up">
+                                            <input type="text" name="groupType" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@group.groupLevel.value.toLowerCase.capitalize.replace("level", "")">
+                                        </div>
+
+                                        <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
+                                            <br>
+                                            <div class="col-sm-6 ">
+                                                <button id="manage-class-edit" type="button" class="btn btn-sm btn-info align-self-center mx-auto the-group-plans-button" disabled="true">
+                                                    Group Plans
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-2 in-app-menu-medium-and-up">
+                                            <button id="manage-class-edit" type="button" class="btn btn-sm btn-info" disabled="true">
+                                                Plans
+                                            </button>
+                                        </div>
+
+                                    </div>
                                 </div>
                             }
                         }
                     </div>
-                    <div class="col-md-2"></div>
-                    <div class="col-md-5">
+                    <div class="col-lg-2 in-app-menu-medium-and-up"></div>
+                    <div class="col-sm-12 col-lg-5 ">
                         <div class="text-center">
                             <label class="manage-class-desription-label manage-class-group-header">Literacy Groups</label>
                         </div>
-                        <div class="row">
-                            <div class="col-md-3 text-muted"><small>Group</small></div>
-                            <div class="col-md-5 text-muted"><small>Description</small></div>
-                            <div class="col-md-2 text-muted"><small>Level</small></div>
-                            <div class="col-md-2"></div>
+                        <div class="row in-app-menu-medium-and-up">
+                            <div class="col-lg-3 text-muted"><small>Group</small></div>
+                            <div class="col-lg-5 text-muted"><small>Description</small></div>
+                            <div class="col-lg-2 text-muted"><small>Level</small></div>
+                            <div class="col-lg-2"></div>
                         </div>
 
                         @for(group <- classDetails.groups) {
                             @if(group.groupType.value.toLowerCase == "literacy") {
-                                <div class="form-row manage-class-group-row">
-                                    <div class="col-md-3">
-                                        <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
-                                        placeholder="@{
-                                            group.groupName.name
-                                        }">
-                                    </div>
-                                    <div class="col-md-5">
-                                        <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
-                                        placeholder="@{
-                                            group.groupDescription.name
-                                        }">
-                                    </div>
-                                    <div class="col-md-2">
-                                        <input type="text" name="groupType" class="form-control form-control-sm" disabled="true"
-                                        placeholder="@{
-                                            group.groupLevel.value.toLowerCase.capitalize.replace("level", "")
-                                        }">
-                                    </div>
+                                <div class="manage-new-group-row">
+                                    <div class="form-row manage-class-group-row">
 
-                                    <div class="col-md-2">
-                                        <button id="manage-class-edit" type="button" class="btn btn-sm btn-info" disabled="true">
-                                            Group Plans
-                                        </button>
+                                        <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
+                                            <div class="col-sm-12 text-muted"><small>Group Name</small></div>
+                                            <div class="col-sm-12 ">
+                                                <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
+                                                placeholder="@{
+                                                    group.groupName.name
+                                                }">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 in-app-menu-medium-and-up">
+                                            <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                group.groupName.name
+                                            }">
+                                        </div>
+
+
+                                        <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
+                                            <div class="col-sm-12 text-muted"><small>Description</small></div>
+                                            <div class="col-sm-12 ">
+                                                <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
+                                                placeholder="@{
+                                                    group.groupDescription.name
+                                                }">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-5 in-app-menu-medium-and-up">
+                                            <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                group.groupDescription.name
+                                            }">
+                                        </div>
+
+
+                                        <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
+                                            <div class="col-sm-12 text-muted"><small>Level</small></div>
+                                            <div class="col-sm-12 ">
+                                                <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
+                                                placeholder="@{
+                                                    group.groupLevel.value.toLowerCase.capitalize.replace("level", "")
+                                                }">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-2 in-app-menu-medium-and-up">
+                                            <input type="text" name="groupType" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@group.groupLevel.value.toLowerCase.capitalize.replace("level", "")">
+                                        </div>
+
+                                        <div class="row in-app-menu-small-devices in-app-menu-small-devices-row">
+                                            <br>
+                                            <div class="col-sm-6 ">
+                                                <button id="manage-class-edit" type="button" class="btn btn-sm btn-info align-self-center mx-auto the-group-plans-button" disabled="true">
+                                                    Group Plans
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-2 in-app-menu-medium-and-up">
+                                            <button id="manage-class-edit" type="button" class="btn btn-sm btn-info" disabled="true">
+                                                Plans
+                                            </button>
+                                        </div>
+
                                     </div>
                                 </div>
                             }
@@ -189,26 +273,26 @@
                 </div>
 
                 <div class="form-row add-new-class-form-row">
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
 
                     @if(classDetails.groups.count(aGroup => aGroup.groupLevel.value.toLowerCase == "other") > 0) {
                         <label class="manage-class-desription-label manage-class-group-header">Other Groups</label>
                         @for(group <- classDetails.groups) {
                             @if(group.groupType.value.toLowerCase == "other") {
                                 <div class="form-row manage-class-group-row">
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
                                         placeholder="@{
                                             group.groupName.name
                                         }">
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-lg-4">
                                         <input type="text" name="groupType" class="form-control form-control-sm" disabled="true"
                                         placeholder="@{
                                             group.groupLevel.value.toLowerCase.capitalize.replace("level", "")
                                         }">
                                     </div>
-                                    @*<div class="col-md-1">*@
+                                    @*<div class="col-lg-1">*@
                                     @*<button type="button" class="close" aria-label="Close">*@
                                     @*<span aria-hidden="true">&times;</span>*@
                                     @*</button>*@
