--- a/server/app/views/planning/classtimetables/classtimetable.scala.html
+++ b/server/app/views/planning/classtimetables/classtimetable.scala.html
@@ -7,42 +7,63 @@
 
 @timetoteachAppMain(handler, s"Class Timetable - " + classDetails.className.name,
     userPictureUri, userFirstName, userFamilyName) {
-    <li></li>}{
+
+    <div class="in-app-menu-small-devices">
+        <li class="nav-item nav-login-button">
+            <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
+                Dashboard</a>
+        </li>
+
+        <li class="nav-item nav-login-button">
+            <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+                Classes</a>
+        </li>
+
+        <li class="nav-item nav-login-button">
+            <a class="btn btn-primary" role="button"
+            href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
+            @classDetails.className.name</a>
+        </li>
+    </div>
+
+} {
 
     <div class="container">
 
         <div class="app-nav-section">
-            <div class="d-flex">
-                <ul class="nav mr-auto justify-content-between">
-                    <li class="nav-item manage-class-nav-item-leftmost">
-                        <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
-                            Dashboard</a>
-                    </li>
+            <div class="in-app-menu-medium-and-up">
+                <div class="d-flex">
+                    <ul class="nav mr-auto justify-content-between">
+                        <li class="nav-item manage-class-nav-item-leftmost">
+                            <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
+                                Dashboard</a>
+                        </li>
 
-                    <li class="nav-item manage-class-nav-item-on-left">
-                        <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
-                            Classes</a>
-                    </li>
+                        <li class="nav-item manage-class-nav-item-on-left">
+                            <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+                                Classes</a>
+                        </li>
 
-                    <li class="nav-item manage-class-nav-item-on-left">
-                        <a class="btn btn-primary" role="button"
-                        href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
+                        <li class="nav-item manage-class-nav-item-on-left">
+                            <a class="btn btn-primary" role="button"
+                            href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
                             @classDetails.className.name</a>
-                    </li>
+                        </li>
 
-                </ul>
+                    </ul>
 
-                <ul class="nav justify-content-end">
-                    <li class="nav-item manage-class-nav-item-on-right">
-                        <button id="manage-class-edit" type="button" class="btn btn-info" disabled="true">
-                            Edit Class</button>
-                    </li>
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item manage-class-nav-item-on-right">
+                            <button id="manage-class-edit" type="button" class="btn btn-info" disabled="true">
+                                Edit Class</button>
+                        </li>
 
-                    <li class="nav-item manage-class-nav-item-rightmost">
-                        <button id="manage-class-delete" type="button" class="btn btn-danger" disabled="true">
-                            Delete Class</button>
-                    </li>
-                </ul>
+                        <li class="nav-item manage-class-nav-item-rightmost">
+                            <button id="manage-class-delete" type="button" class="btn btn-danger" disabled="true">
+                                Delete Class</button>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
